--- a/packages/editor/src/components/entities-saved-states/style.scss
+++ b/packages/editor/src/components/entities-saved-states/style.scss
@@ -18,7 +18,7 @@
 	}
 
 	@include break-medium() {
-		z-index: z-index(".entities-saved-states__panel-break-medium");
+		z-index: z-index(".entities-saved-states__panel {greater than small}");
 		top: $admin-bar-height;
 		left: auto;
 		width: $sidebar-width;
